--- a/src/WRSoftware.Utils.IoC.Framework/WRSoftware.Utils.IoC.Framework.csproj
+++ b/src/WRSoftware.Utils.IoC.Framework/WRSoftware.Utils.IoC.Framework.csproj
@@ -2,6 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
+		<Copyright>Wesley Silva</Copyright>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -20,6 +23,14 @@
 	<ItemGroup>
 		<ProjectReference Include="..\WRSoftware.Utils.Helper\WRSoftware.Utils.Helper.csproj" />
 		<ProjectReference Include="..\WRSoftware.Utils.Logging\WRSoftware.Utils.Logging.csproj" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+	  <None Include="..\..\LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
