--- a/src/WRSoftware.Utils.IoC.Framework/WRSoftware.Utils.IoC.Framework.csproj
+++ b/src/WRSoftware.Utils.IoC.Framework/WRSoftware.Utils.IoC.Framework.csproj
@@ -5,6 +5,10 @@
 		<Copyright>Wesley Silva</Copyright>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
+		<Authors>Wesley Silva</Authors>
+	  	<Company>WRSoftware</Company>
+		<PackageId>WRSoftware.Utils.IoC.Framework</PackageId>
+    	<Product>WRSoftware.Utils.IoC.Framework</Product>
 	</PropertyGroup>
 
 	<ItemGroup>
