--- a/src/WRSoftware.Utils.IoC.Framework/WRSoftware.Utils.IoC.Framework.csproj
+++ b/src/WRSoftware.Utils.IoC.Framework/WRSoftware.Utils.IoC.Framework.csproj
@@ -6,17 +6,15 @@
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
 		<Authors>Wesley Silva</Authors>
-	  	<Company>WRSoftware</Company>
+		<Company>WRSoftware</Company>
 		<PackageId>WRSoftware.Utils.IoC.Framework</PackageId>
-    	<Product>WRSoftware.Utils.IoC.Framework</Product>
+		<Product>WRSoftware.Utils.IoC.Framework</Product>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
-		<PackageReference Include="FluentValidation" Version="9.3.0" />
-		<PackageReference Include="MediatR" Version="9.0.0" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.9" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.9" />
 		<PackageReference Include="NetCore.AutoRegisterDi" Version="2.1.0" />
 		<PackageReference Include="System.Linq" Version="4.3.0" />
@@ -32,8 +30,8 @@
 
 	<ItemGroup>
 	  <None Include="..\..\LICENSE.txt">
-	    <Pack>True</Pack>
-	    <PackagePath></PackagePath>
+		<Pack>True</Pack>
+		<PackagePath></PackagePath>
 	  </None>
 	</ItemGroup>
 
